# evrouter

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.scan
debian/: changelog  control  copyright  examples  rules
debian-old/: .cvsignore  changelog  control  copyright  rules
src/: .cvsignore  Makefile.am  Makefile.in  action_shell.c  action_shell.h  action_xbutton.c  action_xbutton.h  action_xkey.c  action_xkey.h  action_xmms.c  action_xmms.h  cmdline.c  cmdline.h  evdev.c  evdev.h  evrouter.1  evrouter.c  example  parser.c  parser.h  x11.c  x11.h
