# $Id: Makefile.am 6 2004-09-07 22:57:39Z alexios $
#
# $Log$
# Revision 2.0  2004/09/07 22:57:36  alexios
# Stepped version to recover CVS repository after near-catastrophic disk
# crash.
#
# Revision 1.1.1.1  2004/09/07 22:52:34  alexios
# Initial post-crash revision, re-initialised to recover CVS repository after
# near-catastrophic disk crash.
#
# Revision 1.1.1.1  2004/01/28 16:21:41  alexios
# Initial imported revision.
#

SUBDIRS=src
